<resources>
    <string name="app_name">TokenCaseStudy</string>
    <string name="login">Login</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="titleRegister">Register</string>
    <string name="you_are_logged_in_as">You are logged in as</string>
    <string name="go_to_pos">Go To POS</string>
    <string name="amount">Amount (in krş)</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="read_qr_on_customer_ui">Read QR On Customer UI</string>
    <string name="logout">Logout</string>
    <string name="history">History</string>
    <string name="customer">Customer</string>
</resources>