<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/labelRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/titleRegister"
        style="@style/TextAppearance.MaterialComponents.Headline4"/>

    <!--Email Field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/inputPasswordField"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/emailHint"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password Field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordHint"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Buttons-->

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        android:layout_below="@id/inputPasswordField"
        android:layout_marginTop="3dp" />

</RelativeLayout>