<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".POSActivity">

    <ImageView
        android:id="@+id/imageQRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/inputAmountField"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAmountField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/inputAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/amount"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonGenerateQRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputAmountField"
        android:text="@string/generate_qr_code"/>

    <Button
        android:id="@+id/buttonReadQROnCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonGenerateQRCode"
        android:text="@string/read_qr_on_customer_ui"
        android:visibility="gone"/>

</RelativeLayout>